Small fix so that the weekdays' text is aligned

--- a/css/footer.css
+++ b/css/footer.css
@@ -44,7 +44,7 @@ p{
 #saturday-text,
 #sunday-text{
     justify-self: self-start;
-    margin-left: 25px;
+    margin-left: 10px;
 }
 
 #find-us-here{
